pkp/pkp-lib#7135 Multiple author affiliations (Ror) - changes and fixes

--- a/plugins/themes/default/styles/objects/article_details.less
+++ b/plugins/themes/default/styles/objects/article_details.less
@@ -111,6 +111,10 @@
 			font-size: @font-sml;
 			color: @text-light;
 		}
+
+		.affiliation a {
+			display: inline-block;
+		}
 	}
 
 	.author_bios {
